game ober configurado

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Orc Warrior\Scripts\Camera.cs" />
      <Compile Include="Assets\Orc Warrior\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Orc Warrior\Scripts\KillTrigger.cs" />
      <Compile Include="Assets\Orc Warrior\Scripts\MouseController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/opt/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
